# gi-gtk-declarative

./: .ghcid.template  .gitignore  .travis.yml  404.html  BUILD.md  README.md  brittany.yaml  cabal.project  default.nix  ghcid-test.sh  ghcid.sh  gi-gtk-declarative-benchmark.prof  gi-gtk-declarative.cabal  gi-gtk-declarative.nix  hie.yaml  index.html  lib.nix  nixpkgs.nix  shell.nix  sitemap.xml  stack.yaml
.github/workflows/: main.yml
app-simple/: index.html
attributes/css/: index.html
attributes/events/: index.html
attributes/properties/: index.html
contributing/: index.html
css/: theme.css
docs/: mkdocs.yml  requirements.nix  requirements.txt  requirements_frozen.txt
docs/src/: app-simple.md  contributing.md  examples.md  index.md  installation.md
docs/src/attributes/: css.md  events.md  properties.md
docs/src/css/: theme.css
docs/src/user-guide/: app-simple.md  css.md  event-handling.md  installation.md  introduction.md  properties.md
docs/src/user-guide/widgets/: containers.md  custom-widgets.md  single-widgets.md
docs/src/widgets/: bins.md  containers.md  custom-widgets.md  single-widgets.md  the-widget-type.md
example/: Hello.hs
examples/: AddBoxes.hs  CSS.hs  CustomAttribute.hs  CustomWidget.hs  Dialog.hs  Exit.hs  FileChooserButton.hs  Functor.hs  Grid.hs  Hello.hs  ListBox.hs  Main.hs  MainLoop.hs  ManyBoxes.hs  MenuBar.hs  Notebook.hs  Paned.hs  Window.hs  Windows.hs  default.nix  examples.cabal  index.html
gi-gtk-declarative/: CHANGELOG.md  default.nix  gi-gtk-declarative.cabal
gi-gtk-declarative-app-simple/: CHANGELOG.md  default.nix  gi-gtk-declarative-app-simple.cabal
gi-gtk-declarative-app-simple/src/GI/Gtk/Declarative/App/: Simple.hs
gi-gtk-declarative-app-simple/test/: Main.hs
gi-gtk-declarative/bench/: Benchmark.hs
gi-gtk-declarative/src/GI/Gtk/: Declarative.hs
gi-gtk-declarative/src/GI/Gtk/Declarative/: Attributes.hs  Bin.hs  CSS.hs  Children.hs  Container.hs  CustomWidget.hs  EventSource.hs  Markup.hs  Node.hs  Patch.hs  Props.hs  SingleWidget.hs  State.hs  Widget.hs  WindowHost.hs
gi-gtk-declarative/src/GI/Gtk/Declarative/App/: Simple.hs
gi-gtk-declarative/src/GI/Gtk/Declarative/Attributes/: Collected.hs  Custom.hs  Internal.hs
gi-gtk-declarative/src/GI/Gtk/Declarative/Attributes/Custom/: Window.hs
gi-gtk-declarative/src/GI/Gtk/Declarative/Attributes/Internal/: Callback.hs  Conversions.hs  EventHandler.hs
gi-gtk-declarative/src/GI/Gtk/Declarative/Container/: Box.hs  Class.hs  Dialog.hs  Grid.hs  ListBox.hs  MenuItem.hs  Notebook.hs  Paned.hs  Patch.hs
gi-gtk-declarative/src/GI/Gtk/Declarative/EventSource/: Subscription.hs
gi-gtk-declarative/src/GI/Gtk/Declarative/Widget/: Conversions.hs
gi-gtk-declarative/test/: Main.hs
gi-gtk-declarative/test/GI/Gtk/Declarative/: CustomWidgetTest.hs  Gen.hs  PatchTest.hs  TestUtils.hs  TestWidget.hs
installation/: index.html
search/: search_index.json
src/GI/Gtk/: Declarative.hs
src/GI/Gtk/Declarative/: Container.hs  EventSource.hs  Markup.hs  Node.hs  Patch.hs  Props.hs
src/GI/Gtk/Declarative/App/: Simple.hs
widgets/bins/: index.html
widgets/containers/: index.html
widgets/custom-widgets/: index.html
widgets/single-widgets/: index.html
widgets/the-widget-type/: index.html
