name:                 examples
version:              0.1.0
synopsis:             Examples of using gi-gtk-declarative and gi-gtk-declarative-app-simple.
license:              MPL-2.0
license-file:         LICENSE
author:               Oskar Wickström
maintainer:           oskar.wickstrom@gmail.com
copyright:            Oskar Wickström
category:             Graphics
build-type:           Simple
cabal-version:        >=1.10

executable example
  main-is:              Main.hs
  other-modules:        AddBoxes
                      , Exit
                      , FileChooserButton
                      , Functor
                      , Hello
                      , ListBox
                      , MenuBar
                      , Window
  build-depends:        base >=4.10 && <4.12
                      , gi-gobject
                      , gi-glib
                      , gi-gtk
                      , gi-gtk-declarative
                      , gi-gtk-declarative-app-simple
                      , gi-gdk
                      , haskell-gi
                      , haskell-gi-base
                      , pipes
                      , pipes-extras
                      , text
  default-language:     Haskell2010
  ghc-options:          -Wall -threaded
