name:                 examples
version:              0.6.3
synopsis:             Examples of using gi-gtk-declarative and gi-gtk-declarative-app-simple.
description:          Examples showcasing the use of gi-gtk-declarative and
                      gi-gtk-declarative-app-simple in a multitude of ways. These try to cover
                      commonly used widgets and the special features of gi-gtk-declarative atop
                      the regular GTK+ bindings (gi-gtk).
license:              MPL-2.0
license-file:         LICENSE
author:               Oskar Wickström
maintainer:           oskar.wickstrom@gmail.com
copyright:            Oskar Wickström
category:             Graphics
build-type:           Simple
cabal-version:        >=1.10
tested-with:          GHC == 8.6.3

executable example
  main-is:              Main.hs
  other-modules:        AddBoxes
                      , CSS
                      , CustomWidget
                      , Dialog
                      , Exit
                      , FileChooserButton
                      , Functor
                      , Grid
                      , Hello
                      , ListBox
                      , ManyBoxes
                      , MenuBar
                      , Notebook
                      , Paned
  build-depends:        base >=4.10 && <5
                      , async
                      , bytestring
                      , gi-gobject
                      , gi-glib                        == 2.0.24
                      , gi-gtk                         == 3.0.36
                      , gi-gtk-declarative
                      , gi-gtk-declarative-app-simple
                      , gi-gdk
                      , haskell-gi                     == 0.24.5
                      , haskell-gi-base                == 0.24.4
                      , pipes
                      , pipes-extras
                      , text
                      , vector
                      , gi-pango                == 1.0.23
                      , gi-harfbuzz             == 0.0.3
                      , gi-atk                  >= 2.0.22
                      , gi-cairo                >= 1.0.24
                      , gi-gdk                  >= 3.0.23
                      , gi-gdkpixbuf            >= 2.0.24
                      , gi-gio                  >= 2.0.27
                      , gi-gobject              >= 2.0.25
                      , gi-pango                >= 1.0.23
  default-language:     Haskell2010
  ghc-options:          -O2 -Wall -threaded
