name:                 gi-gtk-declarative-app-simple
version:              0.1.0
synopsis:             Declarative GTK+ programming in Haskell in the style of
                      [Pux](https://github.com/alexmingoia/purescript-pux).
-- description:
license:              MPL-2.0
license-file:         LICENSE
author:               Oskar Wickström
maintainer:           oskar.wickstrom@gmail.com
copyright:            Oskar Wickström
category:             Graphics
build-type:           Simple
cabal-version:        >=1.10
extra-source-files:   CHANGELOG.md

library
  exposed-modules:      GI.Gtk.Declarative.App.Simple
  build-depends:        base                    >=4.10    && <4.12
                      , async
                      , gi-gobject              >= 2      && <3
                      , gi-glib
                      , gi-gtk                  >= 3      && <4
                      , gi-gtk-declarative      >= 0.1.0  && <2
                      , gi-gdk
                      , haskell-gi              >= 0.21   && <0.22
                      , haskell-gi-base         >= 0.21   && <0.22
                      , haskell-gi-overloading  == 1.0
                      , pipes                   >= 4      && <5
                      , pipes-concurrency       >= 2      && <3
                      , text
  hs-source-dirs:       src
  default-language:     Haskell2010
  ghc-options:          -Wall
