name:                 gi-gtk-declarative-app-simple
version:              0.7.0
synopsis:             Declarative GTK+ programming in Haskell in the style of Pux.
description:          Experimental application architecture in the style of
                      PureScript Pux, built on top of gi-gtk-declarative.

                      See [the project website](https://owickstrom.github.io/gi-gtk-declarative/)
                      for user guides and more information.
license:              MPL-2.0
license-file:         LICENSE
author:               Oskar Wickström
maintainer:           oskar.wickstrom@gmail.com
copyright:            Oskar Wickström
homepage:             https://owickstrom.github.io/gi-gtk-declarative/
bug-reports:          https://github.com/owickstrom/gi-gtk-declarative/issues
category:             Graphics
build-type:           Simple
cabal-version:        >=1.10
extra-source-files:   CHANGELOG.md
tested-with:          GHC == 8.6.3

library
  exposed-modules:      GI.Gtk.Declarative.App.Simple
  build-depends:        base                    >=4.10 && <5
                      , async
                      , gi-gobject              >=2    && <3
                      , gi-glib
                      , gi-gtk                  >=3    && <4
                      , gi-gdk
                      , haskell-gi              >=0.24 && <0.27
                      , haskell-gi-base         >=0.24 && <0.27
                      , haskell-gi-overloading  >=1.0  && <1.1
                      , pipes                   >=4    && <5
                      , pipes-concurrency       >=2    && <3
                      , text
                      , gi-gtk-declarative      >=0.4  && <0.8
  hs-source-dirs:       src
  default-language:     Haskell2010
  ghc-options:          -Wall

test-suite gi-gtk-declarative-app-simple-tests
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  build-depends:    async
                  , base >= 4 && < 5
                  , gi-gtk <4
                  , gi-gtk-declarative
                  , gi-gtk-declarative-app-simple
                  , hspec
                  , pipes
  default-language: Haskell2010
  ghc-options:      -Wall -O2 -rtsopts -with-rtsopts=-N -threaded
