name:                 gi-gtk-declarative
version:              0.1.0
synopsis:             Declarative GTK+ programming in Haskell
description:          A declarative programming model for GTK+ user
                      interfaces, implementing support for various widgets
                      and generalized patching. This library aims to extend the
                      gi-gtk library as transparently as possible, and to be
                      a reusable library for multiple application architectures
                      and styles.

                      See [the project README](https://github.com/owickstrom/gi-gtk-declarative#readme)
                      for more information.
license:              MPL-2.0
license-file:         LICENSE
author:               Oskar Wickström
maintainer:           oskar.wickstrom@gmail.com
copyright:            Oskar Wickström
category:             Graphics
build-type:           Simple
cabal-version:        >=1.10
extra-source-files:   CHANGELOG.md

library
  exposed-modules:      GI.Gtk.Declarative
                      , GI.Gtk.Declarative.Attributes
                      , GI.Gtk.Declarative.Attributes.Internal
                      , GI.Gtk.Declarative.Bin
                      , GI.Gtk.Declarative.Container
                      , GI.Gtk.Declarative.Container.Box
                      , GI.Gtk.Declarative.Container.Patch
                      , GI.Gtk.Declarative.CSS
                      , GI.Gtk.Declarative.EventSource
                      , GI.Gtk.Declarative.Markup
                      , GI.Gtk.Declarative.Patch
                      , GI.Gtk.Declarative.SingleWidget
  build-depends:        base >=4.10 && <4.12
                      , gi-gobject             >= 2    && <3
                      , gi-gtk                 >= 3    && <4
                      , haskell-gi             >= 0.21 && <0.22
                      , haskell-gi-base        >= 0.21 && <0.22
                      , haskell-gi-overloading == 1.0
                      , mtl
                      , text
                      , unordered-containers >= 0.2 && < 0.3
  hs-source-dirs:       src
  default-language:     Haskell2010
  ghc-options:          -Wall
